# cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: BuildInfo.cmake
docs/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt
examples/spdlog/: CMakeLists.txt
examples/spdlog/src/: testSpdlog.cpp
logs/: basic-log.txt
main/: CMakeLists.txt
main/src/: cmake.cpp
src/: CMakeLists.txt
